Attempt to fix swiping issue on mobile devices

--- a/static/styles/carousel.css
+++ b/static/styles/carousel.css
@@ -14,11 +14,15 @@
   .c-item {
     flex: 0 0 100%;
     position: relative;
+
+    pointer-events: auto;
   }
   
   .c-item img {
     width: 100%;
     height: 100vh;
+
+    pointer-events: auto;
   }
   
   .c-caption {
@@ -30,6 +34,8 @@
     color: white;
     padding: 10px;
     text-align: center;
+
+    pointer-events: auto;
   }
   
   .prev, .next {
